appId: "com.recipedia"
---
- runFlow:
    file: "../common/waitForRecipeDialog.yaml"
    label: "Wait for the post-validation dialog to open"

- assertVisible:
    id: "Recipe::Dialog::Title"
    label: "Alert title is displayed"

- assertVisible:
    text: "Missing elements"
    label: "Alert title text is displayed"

- assertVisible:
    id: "Recipe::Dialog::Content"
    label: "Alert content is displayed"

- assertVisible:
    text: "You haven't add all of the elements to your recipe. Please enter before validate at least: ${MISSING_ELEMENTS}"
    label: "Alert message is displayed"

- assertVisible:
    id: "Recipe::Dialog::Confirm-text"
    label: "Alert confirm button is displayed"

- assertVisible:
    text: "Understood"
    label: "Understood text is displayed"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Close the alert"

- waitForAnimationToEnd:
    label: "Wait for dialog to close"
