appId: "com.recipedia"
---
- runFlow:
    file: "../common/waitForRecipeDialog.yaml"
    label: "Wait for the post-validation dialog to open"

- assertVisible:
    id: "Recipe::Dialog::Title"
    text: "Succès"
    label: "Alert title is rendered"

- assertVisible:
    id: "Recipe::Dialog::Content"
    text: 'La recette "${RECIPE_NAME}" a été ajoutée à votre menu'
    label: "Alert message is rendered"

- assertVisible:
    id: "Recipe::Dialog::Confirm-text"
    text: "OK"
    label: "Alert validation is rendered"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Close the alert"
