appId: "com.recipedia"

---
- runFlow:
    file: "../common/waitForRecipeDialog.yaml"
    label: "Wait for the post-validation dialog to open"

- assertVisible:
    id: "Recipe::Dialog::Title"
    text: "Ajouter"
    label: "Alert title is rendered"

- assertVisible:
    id: "Recipe::Dialog::Content"
    text: "La recette \"${RECIPE_NAME}\" ajoutée avec succès à la base de donnée"
    label: "Alert message is rendered"

- assertVisible:
    id: "Recipe::Dialog::Confirm-text"
    text: "Compris"
    label: "Alert validation button is rendered"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Close the alert"
