appId: "com.recipedia"
---
- assertVisible:
    id: "${MODAL_TEST_ID}::TypeAccordion"
    text: "Type"
    label: "Type accordion header text is visible"

- assertVisible:
    id: "${MODAL_TEST_ID}::SeasonalityCalendar"
    text: "Seasonality"
    label: "Seasonality accordion header text is visible"

- tapOn:
    id: "${MODAL_TEST_ID}::SeasonalityCalendar"
    label: "Action - Expand seasonality accordion"

- extendedWaitUntil:
    visible:
      id: "${MODAL_TEST_ID}::SeasonalityCalendar::ToggleAllButton"
    timeout: 5000
    label: "Wait for seasonality accordion to expand"

- assertVisible:
    id: "${MODAL_TEST_ID}::SeasonalityCalendar::ToggleAllButton"
    label: "Assert - Select all button is visible in seasonality accordion"

- tapOn:
    id: "${MODAL_TEST_ID}::SeasonalityCalendar"
    label: "Action - Collapse seasonality accordion"

- extendedWaitUntil:
    notVisible:
      id: "${MODAL_TEST_ID}::SeasonalityCalendar::ToggleAllButton"
    timeout: 5000
    label: "Wait for seasonality accordion to collapse"
