appId: "com.recipedia"
---
- tapOn:
    id: "Parameters::Section::Data::Ingredients::Item"
    label: "Navigate to Ingredients Settings screen"

- extendedWaitUntil:
    visible:
      id: "IngredientsSettings::BottomActionButton"
    timeout: 20000
    label: "Wait for ingredients settings screen to load"

- tapOn:
    id: "IngredientsSettings::BottomActionButton"
    label: "Open add ingredient dialog"

- extendedWaitUntil:
    visible:
      id: "IngredientsSettings::ItemDialog::AddModal::Title"
    timeout: 20000
    label: "Wait for ingredients settings's add modal to load"

- assertVisible:
    id: "IngredientsSettings::ItemDialog::AddModal::Title"
    text: "Ajouter un ingrédient"
    label: "Add ingredient modal title is displayed in French"

- assertVisible:
    id: "IngredientsSettings::ItemDialog::AddModal::FormHint"
    text: "Le nom et le type sont requis. Plus vous renseignez de détails, meilleure sera votre expérience."
    label: "Form hint text is displayed in French"

- runFlow:
    file: "../../dialogs/fr/assertItemDialogAccordions.yaml"
    env:
      MODAL_TEST_ID: "IngredientsSettings::ItemDialog::AddModal"
    label: "Assert - Verify type and seasonality accordion headers and items are in French"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::CancelButton"
    label: "Dismiss the add ingredient dialog"

- extendedWaitUntil:
    notVisible:
      id: "IngredientsSettings::ItemDialog::AddModal.*"
    timeout: 10000
    label: "Wait for add dialog to hide"

- tapOn:
    id: "IngredientsSettings::AppBar::BackButton"
    label: "Close ingredient data screen"

- extendedWaitUntil:
    notVisible:
      id: "IngredientsSettings::SearchBar"
    timeout: 10000
    label: "Wait for ingredients data screen to hide"
