appId: "com.recipedia"
---
# TODO Add alerts

- assertVisible:
    id: "RecipeTitle::Text"
    text: "Titre:"
    label: "Intro text for the recipe title is displayed in French"
- assertVisible:
    id: "RecipeDescription::Text"
    text: "Description:"
    label: "Intro text for the recipe description is displayed in French"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTags::HeaderText"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll down until tags section is displayed"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeTags::HeaderText"
    text: "Étiquettes:"
    label: "Intro text for the recipe tags is displayed in French"
- assertVisible:
    id: "RecipeTags::ElementText"
    text: "Les étiquettes représentent une façon d'identifier une recette afin d'en faciliter la recherche.\nVoici certains exemples d'étiquettes que vous pouvez utiliser : .*, .*, .*"
    label: "Explanation text for the recipe tags is displayed in French"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::PrefixText"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll down until ingredients section is displayed"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipePersons::PrefixText"
    text: "Cette recette est pour : "
    label: "Intro text for the recipe persons is displayed in French"
- assertVisible:
    id: "RecipePersons::SuffixText"
    text: " personnes"
    label: "Outro text for the recipe persons is displayed in French"
- assertVisible:
    id: "RecipeIngredients::PrefixText"
    text: "Ingrédients : "
    label: "Intro text for the recipe ingredients is displayed in French"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::PrefixText"
    direction: DOWN
    speed: 60
    centerElement: true

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeTime::PrefixText"
    text: "Temps de préparation (minutes) :"
    label: "Intro text for the recipe time is displayed in French"
- assertVisible:
    id: "RecipePreparation::PrefixText"
    text: "Préparation : "
    label: "Recipe preparation section is displayed in French"
- tapOn:
    id: "RecipePreparation::OpenModal::RoundButton"
    label: "Tap on preparation modal"
- runFlow:
    file: "../../modal/fr/CameraModalTranslatedInFrench.yaml"
    label: "Check that modal is translated in French"

- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Tap outside the modal to close it"

- assertVisible:
    id: "Recipe::BottomActionButton-text"
    text: "Ajouter cette nouvelle recette"
    label: "Add validate button is displayed in French"
