appId: "com.recipedia"
---
- assertVisible:
    id: "Recipe::AppBar::BackButton"
    label: "Back button is displayed"

- runFlow:
    when:
      platform: iOS
    commands:
      - assertVisible:
          text: "Back"
          label: "Back button icon is displayed on iOS"

- assertVisible:
    id: "RecipeImage"
    label: "Image is rendered"

- assertVisible:
    id: "RecipeTitle::Text"
    text: "Chicken Tacos"
    label: "Title is rendered"

- assertVisible:
    id: "RecipeDescription::Text"
    text: "Mexican-style tacos with chicken."
    label: "Description is rendered"

- assertVisible:
    id: "RecipeTags::0::Chip"
    label: "First tag is rendered"

- assertVisible:
    text: "Mexican"
    label: "Tag Mexican is rendered"
- assertVisible:
    id: "RecipeTags::1::Chip"
    label: "Second tag is rendered"

- assertVisible:
    text: "Lunch"
    label: "Tag Lunch is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::0::IngredientName"
    direction: DOWN
    speed: 20
    centerElement: true
    label: "Scroll to Taco Shells ingredient"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeIngredients::0::IngredientName"
    text: "Taco Shells"
    label: "Ingredient Taco Shells is rendered"

- assertVisible:
    id: "RecipeIngredients::0::QuantityAndUnit"
    text: "12 pieces"
    label: "Quantity of Taco Shells is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::1::IngredientName"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to Chicken Breast ingredient"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeIngredients::1::IngredientName"
    text: "Chicken Breast"
    label: "Ingredient Chicken Breast is rendered"

- assertVisible:
    id: "RecipeIngredients::1::QuantityAndUnit"
    text: "600 g"
    label: "Quantity of Chicken Breast is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::2::IngredientName"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to Lettuce ingredient"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeIngredients::2::IngredientName"
    text: "Lettuce"
    label: "Ingredient Lettuce is rendered"

- assertVisible:
    id: "RecipeIngredients::2::QuantityAndUnit"
    text: "100 g"
    label: "Quantity of Lettuce is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::3::IngredientName"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to Cheddar ingredient"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeIngredients::3::IngredientName"
    text: "Cheddar"
    label: "Ingredient Cheddar is rendered"

- assertVisible:
    id: "RecipeIngredients::3::QuantityAndUnit"
    text: "100 g"
    label: "Quantity of Cheddar is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::4::IngredientName"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to Burger Buns ingredient"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeIngredients::4::IngredientName"
    text: "Burger Buns"
    label: "Ingredient Burger Buns is rendered"

- assertVisible:
    id: "RecipeIngredients::4::QuantityAndUnit"
    text: "8 "
    label: "Quantity of Burger Buns is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeTime::Text"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation time"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipeTime::Text"
    text: "Preparation (20 min)"
    label: "Preparation title and time of preparation is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::ReadOnlyStep::0::SectionParagraph"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to first preparation step"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipePreparation::ReadOnlyStep::0::SectionTitle"
    text: "1) Prepare chicken"
    label: "First section of the preparation is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::ReadOnlyStep::1::SectionParagraph"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to second preparation step"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipePreparation::ReadOnlyStep::1::SectionTitle"
    text: "2) Assemble tacos"
    label: "Second section of the preparation is rendered"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipePreparation::ReadOnlyStep::2::SectionParagraph"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to third preparation step"

- waitForAnimationToEnd

- assertVisible:
    id: "RecipePreparation::ReadOnlyStep::2::SectionTitle"
    text: "3) Serve"
    label: "Third section of the preparation is rendered"

- runFlow:
    file: "../../common/nutritionReadOnly.yaml"
    env:
      ENERGY_KCAL: "385"
      ENERGY_KJ: "1612"
      FAT: "18[.]2"
      SATURATED_FAT: "9[.]4"
      CARBOHYDRATES: "28"
      SUGARS: "2[.]1"
      FIBER: "2[.]8"
      PROTEIN: "28[.]5"
      SALT: "1[.]2"
    label: "Verify nutrition information is displayed"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: "per portion"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to per portion button"

- waitForAnimationToEnd

- tapOn:
    text: "per portion"
    label: "Per portion button is rendered"

- runFlow:
    file: "../../common/nutritionReadOnly.yaml"
    env:
      ENERGY_KCAL: "770"
      ENERGY_KJ: "3224"
      FAT: "36[.]4"
      SATURATED_FAT: "18[.]8"
      CARBOHYDRATES: "56"
      SUGARS: "4[.]2"
      FIBER: "5[.]6"
      PROTEIN: "57"
      SALT: "2[.]4"
    label: "Verify nutrition information have been calculated per portions"

- runFlow:
    file: "../../common/sourceUrlNotVisible.yaml"
    label: "Assert source URL is not displayed for manual recipe"

- assertVisible:
    id: "Recipe::AppBar::Edit"
    label: "Edit button is rendered"

- assertVisible:
    id: "Recipe::BottomActionButton"
    label: "Add recipe button is displayed"

- assertVisible:
    text: "Add to the menu"
    label: "Add to menu button has the correct text"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "RecipeImage"
    direction: UP
    centerElement: true
    speed: 80
    label: "Scroll back to top"

- waitForAnimationToEnd
